--- a/index.html
+++ b/index.html
@@ -368,6 +368,59 @@
   </div>
 </section>
 
+<!-- ----------------------------------- CONTACT -------------------------------- -->
+<section>
+  
+  <div id="contact" style="font-family: Georgia, 'Times New Roman', Times, serif" class="contact"> 
+    CONTACT  
+  </div>
+
+  <div class="container-fluid" style="margin-top:220px; margin-bottom: 50px;">
+
+    <div class="row">
+        <div class="col-sm-3"></div>
+
+      <form class="col-lg-6">
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="name" name="name" placeholder="Nom" type="text" required>
+          </div>
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="number" name="number" placeholder="Numéro de téléphone" type="text" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          </div>
+            <textarea class="form-control" id="comments" name="comments" placeholder="Commentaire" rows="5"></textarea><br>
+          
+          <div class="row">
+            <div class="col-sm-6 form-group">
+              <button class="btn btn-warning pull-left" type="submit">Envoyer</button>
+            </div>
+          </div>
+      </form>
+
+        <div class="col-sm-3"></div>
+    </div>
+
+  </div>
+
+</section>
+
+
+<!-- ----------------------------------- FOOTER -------------------------------- -->
+<footer class="container-fluid text-center" style="width:100%;">
+  <a href="#myPage" title="To Top">
+    <span class="gliph glyphicon glyphicon-chevron-up"></span>
+  </a>
+    <div>
+      <p>Contactez-nous et nous vous répondrons dans les 24 heures.</p>
+      <p><span class="gliph glyphicon glyphicon-map-marker"></span> TAHITI, PF</p>
+      <p><span class="gliph glyphicon glyphicon-phone"></span> +98740000000</p>
+      <p><span class="gliph glyphicon glyphicon-envelope"></span> rsma987@gmail.com</p>
+    </div>
+</footer>
+
+
 <!-- ----------------------------------- SCRIPT -------------------------------- -->
 <script>
   sr.reveal('.row',{
